<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts dummy data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Clear Products Table</string>

    <!-- Label for overflow menu option that deletes all data in the app [CHAR LIMIT=20] -->
    <string name="action_order_more">Order from Supplier</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Warehouse currently vacant</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_breed">Breed</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_weight">Weight</string>

    <!-- Units for weight of the product (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_product_weight">kg</string>

    <!-- Label for dropdown menu option if the product's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_not_applicable">Not Applicable</string>

    <string name="gender_unisex">Unisex</string>

    <!-- Label for dropdown menu option if the product is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the product is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>



    <string name="label_product_name">Name</string>
    <string name="label_product_price">Price</string>
    <string name="label_product_quantity">Quantity</string>
    <string name="label_supplier_name">Supplier Name</string>
    <string name="label_supplier_email">Supplier Email</string>
    <string name="label_product_image">Product Image</string>
    <string name="hint_price">1.99</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_email">merchant@supply.com</string>
    <string name="btn_quantity_decrement">-</string>
    <string name="btn_quantity_increment">+</string>
    <string name="editor_title_add_product">Add Product</string>
    <string name="editor_title_edit_product">Edit Product</string>
    <string name="editor_replace_image_text">Replace Image</string>
    <string name="editor_add_image_text">Add Image</string>
    <string name="intent_select_image">Select an Image</string>

    <string name="field_is_mandatory">%1$s is mandatory</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="negative_quantity_notice">Negative Quantity not possible</string>
    <string name="no_app_installed">It seems you have no suitable App installed and setup to send Emails</string>
    <string name="product_request_subject">Product request</string>
    <string name="product_request_message">Dear Merchant, I require your product \"%1$s\" in a Quantity of 10.</string>

</resources>
